# ghost-mcp

./: .env.example  .eslintrc.json  .gitignore  CLAUDE.md  Makefile  PLAN.md  README-DOCKER.md  README.md  SPEC.md  docker-compose.yml  jest.config.js  package.json  pyproject.toml  tsconfig.json  verify-setup.sh
.github/workflows/: pypi.yml
contracts/: admin-api-auth.md  api-endpoints.md  content-api-auth.md  content-formats.md  error-responses.md  ghost-filtering.md  phase-0-summary.md  rate-limits.md  setup-process.md
scripts/: create-release.sh  setup-tokens.sh  test-connection.py  test-mcp-tools.py
src/: ghost-client.ts  index.ts
src/auth/: admin-auth.ts  content-auth.ts
src/ghost_mcp/: __init__.py  client.py  config.py  server.py
src/ghost_mcp/auth/: __init__.py  admin_auth.py  content_auth.py
src/ghost_mcp/tools/: __init__.py
src/ghost_mcp/tools/admin/: __init__.py  authors.py  media.py  members.py  pages.py  posts.py  settings.py  tags.py
src/ghost_mcp/tools/content/: __init__.py  authors.py  pages.py  posts.py  settings.py  tags.py
src/ghost_mcp/types/: __init__.py  errors.py  ghost.py  mcp.py
src/ghost_mcp/utils/: __init__.py  content_validation.py  logging.py  retry.py  validation.py
src/tools/admin/: media.ts  members.ts  pages.ts  posts.ts  tags.ts  tiers.ts  webhooks.ts
src/tools/content/: authors.ts  pages.ts  posts.ts  settings.ts  tags.ts
src/types/: ghost.ts  mcp.ts
src/utils/: errors.ts  validation.ts
tests/: __init__.py  test_client.py  test_models.py
tests/e2e/: __init__.py  conftest.py  test_e2e_authors.py  test_e2e_connection.py  test_e2e_pages.py  test_e2e_posts.py  test_e2e_search.py  test_e2e_settings.py  test_e2e_tags.py  test_validation.py  test_validation_pages.py
tests/e2e/template/: complex-post.md
